		* Added very basic TCP/IP stack and HTTP/TELNET servers to RNDIS demo
		* Fixed DFU bootloader exit causing programming software to complain about failed writes
		* Fixed DFU bootloader EEPROM programming mode wiping first flash page
		* Fixed Clear/Set Feature device standard request processing code (fixing MassStorage demo in the process)

	Version 1.5.1 - Released 8th July, 2008:
	--------------------------------------------
		* Changed host demos to enable the host function task on the firing of the USB_DeviceEnumerationComplete event
		  rather than the USB_DeviceAttached event
		* HID Usage Stack now forcefully cleared after an IN/OUT/FEATURE item has been completely processed to remove
		  any referenced but not created usages
		* Changed USB_INT_DisableAllInterrupts() and USB_INT_ClearAllInterrupts(), USB_Host_GetNextDescriptorOfType(),
		  USB_Host_GetNextDescriptorOfTypeBefore(), USB_Host_GetNextDescriptorOfTypeAfter() to normal functions (from inline)
		* Fixed USBtoSerial demo not sending data, only receiving
		* Fixed main makefile to make all by default, fixed MagStripe directory case to prevent case-sensitive path problems
		* ConfigDescriptor functions made normal, instead of static inline
		* Pipe/Endpoint *_Ignore_* functions changed to *_Discard_*, old names still present as aliases
		* Fixed ENDPOINT_MAX_SIZE define to be correct on limited USB controller AVRs
		* Changed endpoint and pipe size translation routines to use previous IF/ELSE IF cascade code, new algorithmic
		  approach was buggy and caused problems
		* Bootloaders now compile with -fno-inline-small-functions option to reduce code size
		* Audio demos now use correct endpoint sizes for full and limited controller USB AVRs, double banking in all cases
		  to be in line with the specification (isochronous endpoints MUST be double banked)
		* Added Interface Association descriptor to StdDescriptors.h, based on the relevant USB2.0 ECN