@@ -13,7 +13,7 @@
  *
  *  Originally based on the AT90USBKEY from Atmel, it is an open-source, driver for the USB-enabled AVR
  *  microcontrollers, released under the Lesser GNU Public Licence, Version 3. Currently, the AT90USB1286,
- *  AT90USB1287, AT90USB646, AT90USB647, AT90USB162, AT90USB82 and ATMEGA32U4 AVR microcontrollers are supported
+ *  AT90USB1287, AT90USB646, AT90USB647, AT90USB162, AT90USB82, ATMEGA16U4 and ATMEGA32U4 AVR microcontrollers are supported
  *  by the library. Supported boards are the USBKEY, STK525, STK526 and RZUSBSTICK.
  *
  *  The library is currently in a stable release, suitable for download and incorporation into user projects for
