@@ -48,7 +48,7 @@
 	/* Includes: */
 		#if (defined(__AVR_AT90USB1286__) || defined(__AVR_AT90USB646__) || \
 		     defined(__AVR_AT90USB1287__) || defined(__AVR_AT90USB647__) || \
-			 defined(__AVR_ATmega32U4__))
+			 defined(__AVR_ATmega16U4__)  || defined(__AVR_ATmega32U4__))
 			#include "AT90USBXXX67/ADC.h"
 		#else
 			#error "ADC is not avaliable for the currently selected AVR model."
